# cpp-alg

linkedList/: meson.build
termPaper/: meson.build
termPaper/src/: main.cpp
